--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
     "@clerk/themes": "^2.1.16",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@next/font": "^14.2.5",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
@@ -35,6 +38,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.3",
+    "styled-components": "^6.1.12",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
